# diecast

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/diecast/: __main__.py
