[project]
name = "diecast"
version = "0.1.0"
description = "The Anvil for LLM Agents. Trace trajectories, cast golden standards, and forge cohesive behavior."
authors = [
    { name = "EmilioBlacksmith" }
]
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.83.14",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "pyzmq>=27.1.0",
    "textual>=8.2.5",
    "typer>=0.23.1",
]

[project.scripts]
diecast = "diecast.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
